# duckdb-python-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: check-release.yml  publish.yml
scripts/: build_wheels.py
src/duckdb_cli/: __main__.py  downloader.py
tests/: test_build_wheels.py  test_downloader.py  test_main.py
