[project]
name = "duckdb-cli"
version = "0.0.0"
description = "The DuckDB CLI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
keywords = ["DuckDB", "Database", "SQL", "OLAP"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
authors = [{name = "DuckDB Foundation"}]
maintainers = [{name = "DuckDB Foundation"}]

[project.urls]
Documentation = "https://duckdb.org/docs/"
Source = "https://github.com/duckdb/duckdb"
Issues = "https://github.com/duckdb/duckdb/issues"
Changelog = "https://github.com/duckdb/duckdb/releases"

[project.scripts]
duckdb = "duckdb_cli.__main__:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
data.scripts = "bin"

[dependency-groups]
dist = ["tomli; python_version < '3.11'"]
test = ["pytest", "pytest-cov"]

[tool.coverage.run]
source = ["duckdb_cli", "build_wheels"]

[tool.coverage.report]
exclude_lines = [
    "if __name__",
    "import tomli",
]

# Extension extras for wheel metadata only (not resolved by uv).
# The build script reads this and emits Provides-Extra / Requires-Dist
# into the wheel METADATA. Version 0.0.0 is replaced at build time.
[tool.duckdb-cli.extras]
autocomplete = ["duckdb-ext-autocomplete==0.0.0"]
avro = ["duckdb-ext-avro==0.0.0"]
aws = ["duckdb-ext-aws==0.0.0"]
azure = ["duckdb-ext-azure==0.0.0"]
core_functions = ["duckdb-ext-core_functions==0.0.0"]
delta = ["duckdb-ext-delta==0.0.0"]
demo_capi = ["duckdb-ext-demo_capi==0.0.0"]
ducklake = ["duckdb-ext-ducklake==0.0.0"]
encodings = ["duckdb-ext-encodings==0.0.0"]
excel = ["duckdb-ext-excel==0.0.0"]
fts = ["duckdb-ext-fts==0.0.0"]
httpfs = ["duckdb-ext-httpfs==0.0.0"]
iceberg = ["duckdb-ext-iceberg==0.0.0"]
icu = ["duckdb-ext-icu==0.0.0"]
inet = ["duckdb-ext-inet==0.0.0"]
jemalloc = ["duckdb-ext-jemalloc==0.0.0"]
json = ["duckdb-ext-json==0.0.0"]
motherduck = ["duckdb-ext-motherduck==0.0.0"]
mysql = ["duckdb-ext-mysql==0.0.0"]
parquet = ["duckdb-ext-parquet==0.0.0"]
postgres = ["duckdb-ext-postgres==0.0.0"]
quack = ["duckdb-ext-quack==0.0.0"]
shell = ["duckdb-ext-shell==0.0.0"]
spatial = ["duckdb-ext-spatial==0.0.0"]
sqlite = ["duckdb-ext-sqlite==0.0.0"]
sqlsmith = ["duckdb-ext-sqlsmith==0.0.0"]
tpcds = ["duckdb-ext-tpcds==0.0.0"]
tpch = ["duckdb-ext-tpch==0.0.0"]
ui = ["duckdb-ext-ui==0.0.0"]
unity_catalog = ["duckdb-ext-unity_catalog==0.0.0"]
vortex = ["duckdb-ext-vortex==0.0.0"]
vss = ["duckdb-ext-vss==0.0.0"]
# Aliases
http = ["duckdb-ext-httpfs==0.0.0"]
https = ["duckdb-ext-httpfs==0.0.0"]
s3 = ["duckdb-ext-httpfs==0.0.0"]
md = ["duckdb-ext-motherduck==0.0.0"]
mysql_scanner = ["duckdb-ext-mysql==0.0.0"]
postgres_scanner = ["duckdb-ext-postgres==0.0.0"]
sqlite_scanner = ["duckdb-ext-sqlite==0.0.0"]
sqlite3 = ["duckdb-ext-sqlite==0.0.0"]
uc_catalog = ["duckdb-ext-unity_catalog==0.0.0"]