[project]
name = "duckdb-cli"
version = "0.0.0"
description = "The DuckDB CLI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
keywords = ["DuckDB", "Database", "SQL", "OLAP"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
authors = [{name = "DuckDB Foundation"}]
maintainers = [{name = "DuckDB Foundation"}]

[project.urls]
Documentation = "https://duckdb.org/docs/"
Source = "https://github.com/duckdb/duckdb"
Issues = "https://github.com/duckdb/duckdb/issues"
Changelog = "https://github.com/duckdb/duckdb/releases"

[project.scripts]
duckdb = "duckdb_cli.__main__:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
data.scripts = "bin"

[dependency-groups]
dist = ["tomli; python_version < '3.11'"]
test = ["pytest", "pytest-cov"]

[tool.coverage.run]
source = ["duckdb_cli", "build_wheels"]

[tool.coverage.report]
exclude_lines = [
    "if __name__",
    "import tomli",
]

# Extension extras for wheel metadata only (not resolved by uv).
# The build script reads this and emits Provides-Extra / Requires-Dist
# into the wheel METADATA. Version 0.0.0 is replaced at build time.
[tool.duckdb-cli.extras]
autocomplete = ["duckdb-core-ext-autocomplete==0.0.0"]
avro = ["duckdb-core-ext-avro==0.0.0"]
aws = ["duckdb-core-ext-aws==0.0.0"]
azure = ["duckdb-core-ext-azure==0.0.0"]
core_functions = ["duckdb-core-ext-core_functions==0.0.0"]
delta = ["duckdb-core-ext-delta==0.0.0"]
demo_capi = ["duckdb-core-ext-demo_capi==0.0.0"]
ducklake = ["duckdb-core-ext-ducklake==0.0.0"]
encodings = ["duckdb-core-ext-encodings==0.0.0"]
excel = ["duckdb-core-ext-excel==0.0.0"]
fts = ["duckdb-core-ext-fts==0.0.0"]
httpfs = ["duckdb-core-ext-httpfs==0.0.0"]
iceberg = ["duckdb-core-ext-iceberg==0.0.0"]
icu = ["duckdb-core-ext-icu==0.0.0"]
inet = ["duckdb-core-ext-inet==0.0.0"]
jemalloc = ["duckdb-core-ext-jemalloc==0.0.0"]
json = ["duckdb-core-ext-json==0.0.0"]
motherduck = ["duckdb-core-ext-motherduck==0.0.0"]
mysql = ["duckdb-core-ext-mysql==0.0.0"]
parquet = ["duckdb-core-ext-parquet==0.0.0"]
postgres = ["duckdb-core-ext-postgres==0.0.0"]
quack = ["duckdb-core-ext-quack==0.0.0"]
shell = ["duckdb-core-ext-shell==0.0.0"]
spatial = ["duckdb-core-ext-spatial==0.0.0"]
sqlite = ["duckdb-core-ext-sqlite==0.0.0"]
sqlsmith = ["duckdb-core-ext-sqlsmith==0.0.0"]
tpcds = ["duckdb-core-ext-tpcds==0.0.0"]
tpch = ["duckdb-core-ext-tpch==0.0.0"]
ui = ["duckdb-core-ext-ui==0.0.0"]
unity_catalog = ["duckdb-core-ext-unity_catalog==0.0.0"]
vortex = ["duckdb-core-ext-vortex==0.0.0"]
vss = ["duckdb-core-ext-vss==0.0.0"]
# Aliases
http = ["duckdb-core-ext-httpfs==0.0.0"]
https = ["duckdb-core-ext-httpfs==0.0.0"]
s3 = ["duckdb-core-ext-httpfs==0.0.0"]
md = ["duckdb-core-ext-motherduck==0.0.0"]
mysql_scanner = ["duckdb-core-ext-mysql==0.0.0"]
postgres_scanner = ["duckdb-core-ext-postgres==0.0.0"]
sqlite_scanner = ["duckdb-core-ext-sqlite==0.0.0"]
sqlite3 = ["duckdb-core-ext-sqlite==0.0.0"]
uc_catalog = ["duckdb-core-ext-unity_catalog==0.0.0"]